Updated ascii art

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -453,15 +453,12 @@
             ALIVE LIGHT CONTROL
         </div>
         
-        <div class="ascii-art">╔══════════════════════════════════════╗
-║                                      ║
-║   ██▄  ██     ███ ██   ██ ███████   ║
-║  ██ ██ ██      ██ ██   ██ ██        ║
-║  █████ ██      ██ ██   ██ ██████    ║
-║  ██ ██ ██      ██  ██ ██  ██        ║
-║  ██ ██ ██████ ███   ███   ███████   ║
-║                                      ║
-╚══════════════════════════════════════╝</div>
+        <div class="ascii-art"> █████╗ ██╗     ██╗██╗   ██╗███████╗
+██╔══██╗██║     ██║██║   ██║██╔════╝
+███████║██║     ██║██║   ██║█████╗  
+██╔══██║██║     ██║╚██╗ ██╔╝██╔══╝  
+██║  ██║███████╗██║ ╚████╔╝ ███████╗
+╚═╝  ╚═╝╚══════╝╚═╝  ╚═══╝  ╚══════╝</div>
 
         <div class="terminal-body">
             <div id="deviceInfo" class="device-info" style="display: none;">
